convert bpmn2petrinet code
